--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "pixi-seed",
+  "name": "pixi-reno",
   "version": "0.2.1",
   "repository": "https://github.com/edwinwebb/pixi-seed",
   "description": "Pixi.js project seed / boiler-plate with ES6 and Webpack",
   "config": {
     "buildDir": "./build",
-    "stageWidth": 1920,
-    "stageHeight": 1080
+    "stageWidth": 800,
+    "stageHeight": 800
   },
   "scripts": {
     "prestart": "npm install",
@@ -29,7 +29,7 @@
     "babel-preset-es2015": "^6.6.0",
     "babel-runtime": "^6.6.1",
     "brfs": "^1.4.3",
-    "eslint": "^2.4.0",
+    "eslint": "^2.6.0",
     "file-loader": "^0.8.4",
     "html-loader": "^0.4.3",
     "json-loader": "^0.5.3",
