--- a/.travis.yml
+++ b/.travis.yml
@@ -17,4 +17,4 @@ after_success:
   - git init
   - git add -A
   - git commit -m 'Deploy to GitHub Pages'
-  - '[ $GH_TOKEN ] && git push --force --quiet https://$GH_TOKEN@github.com/cncgl/angular-lifting-class-judge.git master:gh-pages 2> /dev/null'
+  - '[ $GH_TOKEN ] && git push --force --quiet https://$GH_TOKEN@github.com/cncgl/pixi-reno.git master:gh-pages 2> /dev/null'
